// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when some URLs are not set in the component 1`] = `
<RelatedLinks
  links={
    Object {
      "id": "14_8",
      "link1_text": "shop bathroom",
      "link1_url": Array [
        Object {
          "canonical_path": "/homeware/bathroom",
          "id": "/homeware/bathroom",
          "path": "/homeware/bathroom",
          "url": "/homeware/bathroom",
        },
      ],
      "link2_text": "",
      "link3_text": "",
      "reference": "related_links",
      "title": "related links",
    }
  }
>
  <div
    className="c-links"
  >
    <div
      className="c-links__text"
    >
      <h1
        className="c-links__text-title"
      >
        related links
      </h1>
    </div>
    <div
      className="c-links__grid"
    >
      <div
        key="0"
      >
        <div
          className="c-links__grid-button"
        >
          <Link
            as="/homeware/bathroom"
            href="/slug?slug=/homeware/bathroom"
          >
            <Button
              aria-label="shop bathroom"
              className="c-links__grid-button-icon"
              label="shop bathroom"
              onClick={[Function]}
              size="lrg"
              status="warning"
            >
              <button
                aria-label="shop bathroom"
                className="c-links__grid-button-icon o-button o-button--warning o-button--lrg"
                disabled={false}
                onClick={[Function]}
                role="button"
                tabIndex="0"
              >
                shop bathroom
              </button>
            </Button>
          </Link>
        </div>
      </div>
    </div>
  </div>
</RelatedLinks>
`;

exports[`renders the full RelatedLinks component 1`] = `
<RelatedLinks
  links={
    Object {
      "id": "14_8",
      "link1_text": "shop bathroom",
      "link1_url": Array [
        Object {
          "canonical_path": "/homeware/bathroom",
          "id": "/homeware/bathroom",
          "path": "/homeware/bathroom",
          "url": "/homeware/bathroom",
        },
      ],
      "link2_text": "shop rugs",
      "link2_url": Array [
        Object {
          "canonical_path": "/homeware/living/rugs",
          "id": "/homeware/living/rugs",
          "path": "/homeware/living/rugs",
          "url": "/homeware/living/rugs",
        },
      ],
      "link3_text": "shop cushions & throws",
      "link3_url": Array [
        Object {
          "canonical_path": "/homeware/living/cushions-and-throws",
          "id": "/homeware/living/cushions-and-throws",
          "path": "/homeware/living/cushions-and-throws",
          "url": "/homeware/living/cushions-and-throws",
        },
      ],
      "reference": "related_links",
      "title": "related links",
    }
  }
>
  <div
    className="c-links"
  >
    <div
      className="c-links__text"
    >
      <h1
        className="c-links__text-title"
      >
        related links
      </h1>
    </div>
    <div
      className="c-links__grid"
    >
      <div
        key="0"
      >
        <div
          className="c-links__grid-button"
        >
          <Link
            as="/homeware/bathroom"
            href="/slug?slug=/homeware/bathroom"
          >
            <Button
              aria-label="shop bathroom"
              className="c-links__grid-button-icon"
              label="shop bathroom"
              onClick={[Function]}
              size="lrg"
              status="warning"
            >
              <button
                aria-label="shop bathroom"
                className="c-links__grid-button-icon o-button o-button--warning o-button--lrg"
                disabled={false}
                onClick={[Function]}
                role="button"
                tabIndex="0"
              >
                shop bathroom
              </button>
            </Button>
          </Link>
        </div>
      </div>
      <div
        key="1"
      >
        <div
          className="c-links__grid-button"
        >
          <Link
            as="/homeware/living/rugs"
            href="/slug?slug=/homeware/living/rugs"
          >
            <Button
              aria-label="shop rugs"
              className="c-links__grid-button-icon"
              label="shop rugs"
              onClick={[Function]}
              size="lrg"
              status="warning"
            >
              <button
                aria-label="shop rugs"
                className="c-links__grid-button-icon o-button o-button--warning o-button--lrg"
                disabled={false}
                onClick={[Function]}
                role="button"
                tabIndex="0"
              >
                shop rugs
              </button>
            </Button>
          </Link>
        </div>
      </div>
      <div
        key="2"
      >
        <div
          className="c-links__grid-button"
        >
          <Link
            as="/homeware/living/cushions-and-throws"
            href="/slug?slug=/homeware/living/cushions-and-throws"
          >
            <Button
              aria-label="shop cushions & throws"
              className="c-links__grid-button-icon"
              label="shop cushions & throws"
              onClick={[Function]}
              size="lrg"
              status="warning"
            >
              <button
                aria-label="shop cushions & throws"
                className="c-links__grid-button-icon o-button o-button--warning o-button--lrg"
                disabled={false}
                onClick={[Function]}
                role="button"
                tabIndex="0"
              >
                shop cushions & throws
              </button>
            </Button>
          </Link>
        </div>
      </div>
    </div>
  </div>
</RelatedLinks>
`;
